# OurvonAndroid

./: .gitignore  gradle.properties  settings.gradle
.github/workflows/: android.yml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs-project/: main.js
app/src/main/cpp/: native-lib.cpp  rn-bridge.cpp
app/src/main/java/com/ourvon/app/adapter/: ChatAdapter.java  FileAdapter.java
app/src/main/java/com/ourvon/app/model/: ApiModels.java
app/src/main/java/com/ourvon/app/network/: LocalBackendManager.java  OurvonClient.java
app/src/main/java/com/ourvon/app/server/: OurvonServer.java
app/src/main/java/com/ourvon/app/service/: NodeService.java
app/src/main/java/com/ourvon/app/ui/: FileBrowserActivity.java  MainActivity.java  ProvidersActivity.java  SettingsActivity.java
app/src/main/res/drawable/: ic_close.xml  ic_compass.xml  ic_edit.xml  ic_folder.xml  ic_gallery.xml  ic_history.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_pause.xml  ic_send.xml  ic_settings.xml
app/src/main/res/layout/: activity_file_browser.xml  activity_main.xml  activity_providers.xml  activity_settings.xml  item_chat_message.xml  item_file.xml  item_provider.xml
app/src/main/res/menu/: main_menu.xml  nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
